# heirloom-inheritance-protocol

./: README.md  package-lock.json  package.json
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/upload-ipfs/: route.js
frontend/src/app/dashboard/: page.tsx
frontend/src/app/inherit/: page.tsx
frontend/src/app/received-vault/: page.tsx
frontend/src/components/: BackgroundHero.tsx  SparklesHero.tsx
frontend/src/components/dashboard/: inheritance-form.tsx  received-inheritances.tsx
frontend/src/components/ui/: background-lines.tsx  dashboard-tabs.tsx  floating-navbar.tsx  scroll-indicator.tsx  success-modal.tsx  text-generate-effect.tsx  wobble-card-demo.tsx
frontend/src/lib/: contract.ts  viem.ts
frontend/src/lib/services/: heriloomProtocol.ts
stylus/: Cargo.toml  README.md
stylus/src/: lib.rs
